@@ -201,6 +201,18 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|DefaultExtendableItem
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|Ivy
 import|;
 end_import
@@ -1665,6 +1677,13 @@ argument_list|,
 name|ext
 argument_list|)
 expr_stmt|;
+name|fillAttributes
+argument_list|(
+name|_artifact
+argument_list|,
+name|attributes
+argument_list|)
+expr_stmt|;
 name|String
 name|confs
 init|=
@@ -2027,6 +2046,13 @@ argument_list|,
 name|transitive
 argument_list|)
 expr_stmt|;
+name|fillAttributes
+argument_list|(
+name|_dd
+argument_list|,
+name|attributes
+argument_list|)
+expr_stmt|;
 name|_md
 operator|.
 name|addDependency
@@ -2135,10 +2161,9 @@ literal|"extends"
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|_md
-operator|.
-name|addConfiguration
-argument_list|(
+name|Configuration
+name|configuration
+init|=
 operator|new
 name|Configuration
 argument_list|(
@@ -2184,6 +2209,19 @@ argument_list|(
 literal|","
 argument_list|)
 argument_list|)
+decl_stmt|;
+name|fillAttributes
+argument_list|(
+name|configuration
+argument_list|,
+name|attributes
+argument_list|)
+expr_stmt|;
+name|_md
+operator|.
+name|addConfiguration
+argument_list|(
+name|configuration
 argument_list|)
 expr_stmt|;
 break|break;
@@ -3558,6 +3596,56 @@ operator|new
 name|Configuration
 argument_list|(
 literal|"default"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|fillAttributes
+parameter_list|(
+name|DefaultExtendableItem
+name|item
+parameter_list|,
+name|Attributes
+name|attributes
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|attributes
+operator|.
+name|getLength
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|item
+operator|.
+name|setAttribute
+argument_list|(
+name|attributes
+operator|.
+name|getQName
+argument_list|(
+name|i
+argument_list|)
+argument_list|,
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+name|i
 argument_list|)
 argument_list|)
 expr_stmt|;
