@@ -83,6 +83,18 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|Artifact
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|Configuration
 import|;
 end_import
@@ -4804,6 +4816,185 @@ name|getDependencyConfigurations
 argument_list|(
 literal|"test"
 argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testExtraAttributes
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|_ivy
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-extra-attributes.xml"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"confextravalue"
+argument_list|,
+name|md
+operator|.
+name|getConfiguration
+argument_list|(
+literal|"default"
+argument_list|)
+operator|.
+name|getAttribute
+argument_list|(
+literal|"confextra"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artifact
+index|[]
+name|artifacts
+init|=
+name|md
+operator|.
+name|getArtifacts
+argument_list|(
+literal|"default"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|artifacts
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Artifact
+name|art
+init|=
+name|artifacts
+index|[
+literal|0
+index|]
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"art1"
+argument_list|,
+name|art
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"artextravalue"
+argument_list|,
+name|art
+operator|.
+name|getAttribute
+argument_list|(
+literal|"artextra"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|DependencyDescriptor
+index|[]
+name|dependencies
+init|=
+name|md
+operator|.
+name|getDependencies
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|dependencies
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dependencies
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|DependencyDescriptor
+name|dd
+init|=
+name|getDependency
+argument_list|(
+name|dependencies
+argument_list|,
+literal|"mymodule1"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|dd
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"myorg"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.0"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"depextravalue"
+argument_list|,
+name|dd
+operator|.
+name|getAttribute
+argument_list|(
+literal|"depextra"
 argument_list|)
 argument_list|)
 expr_stmt|;
