@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml-stylesheet type="text/xsl" href="http://www.jayasoft.fr/org/ivyrep/ivy-doc.xsl"?>
+<ivy-module version="1.0">
+	<info organisation="myorg"
+	       module="mymodule"
+	       revision="myrev"
+	       status="integration"
+	       publication="20041101110000"/>
+	<configurations>
+		<conf name="default" confextra="confextravalue"/>
+	</configurations>
+	<publications>
+		<artifact name="art1" type="jar" ext="jar" artextra="artextravalue"/>
+	</publications>
+	<dependencies>
+		<dependency name="mymodule1" rev="1.0" depextra="depextravalue"/>
+	</dependencies>
+</ivy-module>
